--- a/store2.html
+++ b/store2.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="store2.css">
+    <link rel="stylesheet" href="styles/store2.css">
     <title>...</title>
 </head>
+
 <body>
-     <div class="header">
-         <h2 class="logo">Codebrky</h2>
-      <ul class="menu">
-       <a href="#">Features</a>
-       <a href="#">Pricing</a>
-       <a href="#">Webinars</a>
-       <a href="#">Resources</a>
-       <a href="#">Login</a>
-      </ul>
+    <div class="header">
+        <h2 class="logo">Codebrky</h2>
+        <ul class="menu">
+            <a href="#">Features</a>
+            <a href="#">Pricing</a>
+            <a href="#">Webinars</a>
+            <a href="#">Resources</a>
+            <a href="#">Login</a>
+        </ul>
     </div>
     <div class="ortayazı">
-<h1 class="day">BERKAY</h1>
-<p class="find">Find simple plans for comprehensive automations.</p>
+        <h1 class="day">BERKAY</h1>
+        <p class="find">Find simple plans for comprehensive automations.</p>
     </div>
 
 
 
-<div class="container">
-      <div class="pricing-table table1">
-          <div class="pricing-header">
-              <div class="price"><span>$</span>500</div>
-              <div class="title">BASIC</div>
-          </div>
-          <ul class="pricing-list">
-              <li>Custom fields(Basic)</li>
-              <div class="border"></div>
-              <li>Web forms (Basic)</li>
-              <div class="border"></div>
-              <li>Workflows (Basic)</li>
-              <div class="border"></div>
-              <li>Reports and Dashboards (Basic)</li>
-              <div class="border"></div>
-              <li>Slack Integration</li>
-              <div class="border"></div>
-              <li>Roles and Profiles</li>
-              <div class="border"></div>
-              <li>10,000 Records</li>
-          </ul>
-          <a href="#">GET STARTED</a>
- </div>
-</div>
+    <div class="container">
+        <div class="pricing-table table1">
+            <div class="pricing-header">
+                <div class="price"><span>$</span>500</div>
+                <div class="title">BASIC</div>
+            </div>
+            <ul class="pricing-list">
+                <li>Custom fields(Basic)</li>
+                <div class="border"></div>
+                <li>Web forms (Basic)</li>
+                <div class="border"></div>
+                <li>Workflows (Basic)</li>
+                <div class="border"></div>
+                <li>Reports and Dashboards (Basic)</li>
+                <div class="border"></div>
+                <li>Slack Integration</li>
+                <div class="border"></div>
+                <li>Roles and Profiles</li>
+                <div class="border"></div>
+                <li>10,000 Records</li>
+            </ul>
+            <a href="#">GET STARTED</a>
+        </div>
+    </div>
 
 
-
-<div class="container">
+    <div class="container">
         <div class="pricing-table table2">
             <div class="pricing-header">
                 <div class="price"><span>$</span>720</div>
@@ -72,13 +73,11 @@
                 <li>Hebele hübele</li>
             </ul>
             <a href="#">GET STARTED</a>
-   </div>
-  </div>
+        </div>
+    </div>
 
 
-
-
-  <div class="container">
+    <div class="container">
         <div class="pricing-table table3">
             <div class="pricing-header">
                 <div class="price"><span>$</span>1,200</div>
@@ -100,8 +99,9 @@
                 <li>10,000 Records</li>
             </ul>
             <a href="#">GET STARTED</a>
-   </div>
-  </div>
-  </div>
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
